--- a/requirements-docker.txt
+++ b/requirements-docker.txt
@@ -1,11 +1,9 @@
 flask==2.3.3
-opencv-python==4.8.1.78
-ultralytics==8.0.196
+opencv-python-headless==4.8.1.78
 numpy==1.24.3
 matplotlib==3.7.2
 boto3==1.28.62
 Pillow==10.0.1
 torch==2.0.1
 torchvision==0.15.2
-click==8.1.7
-botocore==1.31.62
+ultralytics==8.0.196
